--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,9 @@ body {
 }
 
 #getQuote {
-    background: rgba(37, 37, 37, 0.5);
-    color: #191919;
+    background: rgba(0, 0, 0, 0.1);
+    color: rgb(59, 59, 59);
+    text-shadow: -2px 2px 1px rgba(0,0,0,0.2);
     font-size: 2;
     padding: 0.5rem;
     margin: 0.5rem auto;
@@ -134,6 +135,11 @@ a:visited {
   text-decoration: none;
   color:rgba(255,225,255, 0.2);
   text-shadow:-1px 1px 0px rgba(0,0,0,0.2);
+}
+a:hover {
+  text-decoration: none;
+  color:rgba(255,225,255, 0.2) important!;
+  text-shadow:-1px 1px 0px rgba(0,0,0,0.2) important!;
 }
 /* ------ Mobile ------ */
 @media (min-device-width: 100px) and (max-device-width: 400px) {
