--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ a:hover {
   color:rgba(255,225,255, 0.2) important!;
   text-shadow:-1px 1px 0px rgba(0,0,0,0.2) important!;
 }
+.logo-lower{
+  width: 10px;
+}
 /* ------ Mobile ------ */
 @media (min-device-width: 100px) and (max-device-width: 400px) {
     .contents {
