--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ h3 {
 }
 
 small {
-    font-family: 'EB Garamond', serif;
-    color: rgba(255, 255, 255, 0.2)
+    font-weight: 200;
+    color: rgba(255, 255, 255, 0.5)
 }
 
 div.message {
@@ -65,31 +65,32 @@ body {
 }
 
 #getQuote {
-    background: rgba(0, 0, 0, 0.1);
-    color: rgb(59, 59, 59);
-    text-shadow: -2px 2px 1px rgba(0,0,0,0.2);
-    font-size: 2;
-    padding: 0.5rem;
-    margin: 0.5rem auto;
-    font-family: inherit;
-    -webkit-box-shadow: 0rem 0.5rem rgba(0, 0, 0, 0.4);
-    box-shadow: 0rem 0.5rem rgba(0, 0, 0, 0.4);
-    margin:1rem;
-    padding: 0.8rem;
-    font-weight: 400;
-    font-style: italic;
-    cursor: pointer;
+  border: solid #171717;
+  background: rgba(255, 255, 255, 0.06);
+  color: rgba(255, 255, 255,0.5);
+  text-shadow: -2px 2px 1px rgba(0,0,0,0.2);
+  font-size: 2;
+  padding: 0.5rem;
+  margin: 0.5rem auto;
+  font-family: inherit;
+  -webkit-box-shadow: 0rem 0.5rem rgba(0, 0, 0, 0.4);
+  box-shadow: 0rem 0.5rem rgba(0, 0, 0, 0.5);
+  margin: 1rem;
+  padding: 0.8rem;
+  font-weight: 400;
+  font-style: italic;
+  cursor: pointer;
 }
 
 .message {
     background: url("http://api.thumbr.it/whitenoise-361x370.png?background=1e1e1e&noise=626262&density=53&opacity=15");
-    border-radius: 0.2rem;
+    border-radius: .2rem;
     padding: 1rem;
+    border: solid #171717;
     margin: 1rem;
-    color: white;
+    color: #fff;
     text-shadow: 2px 2px 5px black;
-    -webkit-box-shadow: inset 0 2px 10px black;
-    box-shadow: inset 0 2px 10px black;
+    box-shadow: inset 0px 7px 0 #171717;
 }
 
 .loader {
